--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair:100,200,300,400,500,600,700 | Exo:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700 | Exo:100,200,300,400,500,600,700');
 
 /*----------------------------------Colours*/
 .bg-color-name-title{
@@ -19,6 +19,26 @@
 
 .ui-menu-color-download{
     background-color: #525252;
+}
+
+/*----------------------------------Special padding/margins/text*/
+
+.h1, h2, h3, h4{
+    margin: 0;
+}
+
+.uppercase{
+    text-transform: uppercase;
+}
+
+.general-sub{
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block{
+    display: inline-block;
 }
 
 /*----------------------------------Headings*/
@@ -71,6 +91,10 @@ header{
     padding: 0;
 }
 
+#nav{
+    margin: 0;
+}
+
 .menuitem{
     height:120px;
     text-align: center;
@@ -100,4 +124,19 @@ header{
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+/*----------------------------------Hover.css*/
+
+.hvr-sweep-to-bottom:before{
+    background: rgba(0,0,0,0.2);
+    height: 120px;
+}
+
+/*----------------------------------Footer*/
+
+footer{
+background-color: #525252;
+color:#fafafa;
+min-height: 120px;
 }
