--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
     background-color:#676767;
 }
 
+.bg-color-three-reasons{
+    background-color: #fff;
+}
+
 .ui-menu-color-home{
     background-color: #e67e22;
 }
@@ -41,6 +45,25 @@
     display: inline-block;
 }
 
+.row-table{
+    display: table;
+}
+
+.section-column{
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading{
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+.col{
+    padding: 0;
+}
 /*----------------------------------Headings*/
 header{
     margin:0;
@@ -160,7 +183,7 @@ min-height: 120px;
     padding-bottom: 15px;
 }
 
-.social-links li a i{
+.social-links i{
     width: 32px;
     height: 32px;
     padding: 12px 0;
@@ -176,6 +199,6 @@ min-height: 120px;
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a i:hover{
+.social-links i:hover{
     background-color: #e84610;
 }
