--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,3 +202,14 @@ min-height: 120px;
 .social-links i:hover{
     background-color: #e84610;
 }
+
+/*----------------------------------Three reasons*/
+
+.three-reasons-icon{
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading{
+    margin-bottom: 15px;
+}
