--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@
 .bg-color-personal-info{
     background-color: #f4f4f4;
 }
+
+.bg-color-work-history{
+    background-color: #9b59b6;
+} 
+
 /*----------------------------------Special padding/margins/text*/
 
 .h1, h2, h3, h4{
@@ -58,6 +63,7 @@
     float: none;
 }
 
+.history-heading,
 .section-heading{
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -270,4 +276,56 @@ min-height: 120px;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section{
+    margin: 40px 20px;
+}
+
+/*----------------------------------Work history*/
+
+.history-heading{
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item{
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: solid 1px;
+}
+
+.timeline-item p{
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before{
+    content:attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo" sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after{
+    width: 12px;
+    height: 12px;
+    display: block;
+    position: absolute;
+    top: 2.4em;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background-color: #fafafa;
+}
+
+.history-items{
+    margin-bottom: 30px;
 }
