--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,9 @@
     background-color: #9b59b6;
 } 
 
+.bg-color-contact{
+    background-color: #fff;
+}
 /*----------------------------------Special padding/margins/text*/
 
 .h1, h2, h3, h4{
@@ -47,6 +50,7 @@
     font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
+    padding-top: 20px;
 }
 
 .inline-block{
@@ -328,4 +332,26 @@ min-height: 120px;
 
 .history-items{
     margin-bottom: 30px;
+}
+
+/*----------------------------------Contact Form*/
+
+.contact-heading{
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form{
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"]{
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
 }
