--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,3 +355,14 @@ button[type="submit"]{
     color: #fafafa;
     background-color: #e84610;
 }
+
+/*----------------------------------Media query*/
+
+@media(min-width:992px){
+    .center-form{
+    padding-top: 30px;
+    min-height: 240px;
+    margin: 0 auto;
+    max-width: 50%;
+}
+}
